--- a/superstars/superboo.html
+++ b/superstars/superboo.html
@@ -64,5 +64,64 @@
 
         <script src="minisuper.js"></script>
         <script src="happensuper.js"></script>
+
+        <div class="des">
+            <p>
+                Horror Land has a 5 star difficulty rating and is dubbed the hardest board in all of Mario Party Superstars. There are 8 star spots across the board and there 
+                are a lot of junctions so making correct decisions on paths is pivotal.
+            </p>
+            <h2>
+                Gimmicks!
+            </h2>
+            <p>
+                There are a lot of gimmicks on this board. This board's main gimmick is the day and night function that rotates every two turns. However, you can change 
+                the time if you land on a happening space or you talk to either kamek at the mansion (to change it to night) or go to the dancing floor (to change it to day). 
+                The main reason for the night and day time gimmicks is because there is an abnormal amount of boos on this board, and the boos are active depending on time. 
+                If it's day time, only the boo at the bottom is active, and it is guarded by a skeleton gate. At night, the two boos on the left side and King Boo is active. 
+                King Boo is guarded by a skeleton gate. King Boo is different from normal boo because King Boo has the power to take one star from all of your opponenets 
+                for 3 times the cost (150 coins). He also lets you take coins from everyone for free, making King Boo a very overpowered entity. If you visit Mr. I, 
+                he will take you all he way across the map, from the bottom right corner to the top left corner. for 6 coins during the day and 3 coins during the night. 
+                Lastly, there are whomps in the way of junctions and if a whomp is blocking a desired path, then you have to pay 5 coins to move him. If it is a night, then 
+                the whomps are frozen and that path is blocked until it becomes day.
+            </p>
+            <h2>
+                Board Layout!
+            </h2>
+            <p>
+                Total: 55 Spaces!
+                23 Blue Spaces
+                5 Red Spaces
+                11 Lucky Spaces
+                7 Happening Spaces
+                3 Item Spaces
+                3 Bowser Spaces
+                2 VS Spaces
+                1 Chance Time Space
+            </p>
+            <h2>
+                Best Items!
+            </h2>
+            <p>
+                I recommend stashing warp blocks in your inventory because it's a cheap way to travel between the islands and destroy your 
+                opponents. I say this because there is a lot of variance with this board since the star could move at anytime, so having one 
+                of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
+                pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
+                dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
+                a ton of these when you cross him, so I would recommend not getting them from the Item Shop.
+            </p>
+            <h2>
+                Strategies!
+            </h2>
+            <p>
+                I recommend not spending an obscene amount of coins at thowmps to mess with your opponents. Instead, I would just spend 
+                the bear minimum to cross because there is so much variance. For example, you spend all of your coins to trap the other 
+                opponents on the island without the star, and then someone lands on a happening space and moves the star. Now you are 
+                locked on an island because you can't afford to go back. However, there are always situations where blocking is beneficial, 
+                especially when there is a lot of coins in the coin economy. For example, blocking first place off an island can allow you to 
+                catch up can be extremely good, especially since the coin star has changed to whoever collects the most coins, meaning you 
+                do not have to save coins anymore. Also, curse blocking people to land on happening spaces is always a good way to get the 
+                star moved. However, be careful you aren't giving away the happening star!
+            </p>
+        </div>
 </body>
 </html>
