--- a/superstars/superboo.html
+++ b/superstars/superboo.html
@@ -2,12 +2,23 @@
 <html lang="en">
     <head>
         <title>Horror Land!</title>
+        <link rel="stylesheet" href="superboo.css">
     </head>
     <body>
         <h1>
             Horror Land!
         </h1>
         <img src="horrorland.jpg" alt="Horror Land" id="horror">
+        <div class="stars">
+            <img src="star.png" alt="star" id="s1">
+            <img src="star.png" alt="star" id="s2">
+            <img src="star.png" alt="star" id="s3">
+            <img src="star.png" alt="star" id="s4">
+            <img src="star.png" alt="star" id="s5">
+            <img src="star.png" alt="star" id="s6">
+            <img src="star.png" alt="star" id="s7">
+        </div>
+        <button class = "btn" id = "starreset">Reset Stars</button>
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
@@ -102,25 +113,27 @@
                 Best Items!
             </h2>
             <p>
-                I recommend stashing warp blocks in your inventory because it's a cheap way to travel between the islands and destroy your 
-                opponents. I say this because there is a lot of variance with this board since the star could move at anytime, so having one 
-                of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
-                pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
-                dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
-                a ton of these when you cross him, so I would recommend not getting them from the Item Shop.
+                First off, I think all items for this board. For more consistency, I recommend prioritizing movement items like 
+                mushrooms, double dice, and triple dice because this board is very large. Also, getting the custon dice block 
+                can be very valuable for farming happening spaces and changing the time of day. Warp blocks are also very good 
+                because there's a chance to switch with a person in an advantageous position. For example, if there is someone near 
+                King Boo or on the Two Boo path, then taking a chance with the warp block is definitely worth it. Just make sure 
+                you don't put a strong competitor in an advantageous position! However, I would still prioritze movement items and 
+                custom block over warp block in the item shop due to the risk of the warp block. Lastly Skeleton Keys are super 
+                valuable on this map. The Skeleton Gate on the bottom left leads to a boo during the day time, and the Skeleton 
+                Gate on the upper right has King Boo during the night time. Having a Skeleton Key in your inventory adds a lot 
+                of options to your strategy However, I wouldn't buy Skeleton Keys from the item shop unless it directly impacts 
+                your strategy. Lucky Spaces are very common in this game, so it's likely that you will roll a Skeleton Key anyways.
             </p>
             <h2>
                 Strategies!
             </h2>
             <p>
-                I recommend not spending an obscene amount of coins at thowmps to mess with your opponents. Instead, I would just spend 
-                the bear minimum to cross because there is so much variance. For example, you spend all of your coins to trap the other 
-                opponents on the island without the star, and then someone lands on a happening space and moves the star. Now you are 
-                locked on an island because you can't afford to go back. However, there are always situations where blocking is beneficial, 
-                especially when there is a lot of coins in the coin economy. For example, blocking first place off an island can allow you to 
-                catch up can be extremely good, especially since the coin star has changed to whoever collects the most coins, meaning you 
-                do not have to save coins anymore. Also, curse blocking people to land on happening spaces is always a good way to get the 
-                star moved. However, be careful you aren't giving away the happening star!
+                Happening space farming is very important. It allows you the have control of the game by limiting boo encounters 
+                for the other players, making custom block very important. Think of it like controlling the robber with 
+                development cards in Catan. Your top priority is to be visiting boo as much as possible when you have coins built up. 
+                Stealing stars is really crucial since coins are really easy to get in this game. If you are able to get 150 coins, 
+                visiting King Boo when everyone has a star essentially guarantees the win.
             </p>
         </div>
 </body>
