--- a/superstars/superyoshi.html
+++ b/superstars/superyoshi.html
@@ -86,7 +86,7 @@
             Board Layout!
         </h2>
         <p>
-            Total: 55 Spaces!
+            Total: 55 Spaces! <br>
             23 Blue Spaces
             5 Red Spaces
             11 Lucky Spaces
@@ -95,6 +95,8 @@
             3 Bowser Spaces
             2 VS Spaces
             1 Chance Time Space
+            1 Item Shop
+            0 Koopa Banks
         </p>
         <h2>
             Best Items!
@@ -105,7 +107,7 @@
             of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
             pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
             dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
-            a ton of these when you cross him, so I would recommend getting them from the store.
+            a ton of these when you cross him, so I would recommend not getting them from the Item Shop.
         </p>
         <h2>
             Strategies!
