--- a/superstars/superboo.html
+++ b/superstars/superboo.html
@@ -17,8 +17,10 @@
             <img src="star.png" alt="star" id="s5">
             <img src="star.png" alt="star" id="s6">
             <img src="star.png" alt="star" id="s7">
+            <img src="star.png" alt="star" id="s8">
         </div>
         <button class = "btn" id = "starreset">Reset Stars</button>
+        <script src="stars.js"></script>
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
