--- a/superstars/superwood.html
+++ b/superstars/superwood.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Yoshi's Tropical Island!</title>
+        <title>Woody Woods!</title>
+        <link rel="stylesheet" href="wood.css">
     </head>
     <body>
         <h1>
-            Yoshi's Tropical Island!
+            Woody Woods!
         </h1>
-        <img src="yoshi.png" alt="Yoshi's Island" id="island">
+        <img src="woodywoods.jpg" alt="Woody Woods" id="woodywoods">
+        <div class="stars">
+            <img src="star.png" alt="star" id="s1">
+            <img src="star.png" alt="star" id="s2">
+            <img src="star.png" alt="star" id="s3">
+            <img src="star.png" alt="star" id="s4">
+            <img src="star.png" alt="star" id="s5">
+            <img src="star.png" alt="star" id="s6">
+            <img src="star.png" alt="star" id="s7">
+            <img src="star.png" alt="star" id="s8">
+            <img src="star.png" alt="star" id="s9">
+            <img src="star.png" alt="star" id="s10">
+        </div>
+        <button class = "btn" id = "starreset">Reset Stars</button>
+        <script src="stars.js"></script>
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
