--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form method="get" action="superstars/superyoshi.html">
             <button type="submit" class = "btn" id = "superyoshi">Yoshi's Tropical Island!</button><br><br>
             </form>
-            <form method="get" action="supestars/superpeach.html">
+            <form method="get" action="superstars/superpeach.html">
             <button type="submit" class = "btn" id = "superpeach">Peach's Birthday Cake!</button><br><br>
             </form>
             <form method="get" action="superstars/superboo.html">
