--- a/superstars/superpeach.html
+++ b/superstars/superpeach.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Yoshi's Tropical Island!</title>
+        <title>Peach's Birthday Cake!</title>
     </head>
     <body>
         <h1>
-            Yoshi's Tropical Island!
+            Peach's Birthday Cake!
         </h1>
-        <img src="yoshi.png" alt="Yoshi's Island" id="island">
+        <img src="peach.png" alt="Peach" id="cake">
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
