--- a/superstars/superwood.html
+++ b/superstars/superwood.html
@@ -22,7 +22,7 @@
             <img src="star.png" alt="star" id="s10">
         </div>
         <button class = "btn" id = "starreset">Reset Stars</button>
-        <script src="stars.js"></script>
+        <script src="stars2.js"></script>
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
