--- a/superstars/superspace.html
+++ b/superstars/superspace.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Yoshi's Tropical Island!</title>
+        <title>Space Land!</title>
+        <link rel="stylesheet" href="space.css">
     </head>
     <body>
         <h1>
-            Yoshi's Tropical Island!
+            Space Land!
         </h1>
-        <img src="yoshi.png" alt="Yoshi's Island" id="island">
+        <img src="spaceland.jpg" alt="Space Land" id="space">
+        <div class="stars">
+            <img src="star.png" alt="star" id="s1">
+            <img src="star.png" alt="star" id="s2">
+            <img src="star.png" alt="star" id="s3">
+            <img src="star.png" alt="star" id="s4">
+            <img src="star.png" alt="star" id="s5">
+            <img src="star.png" alt="star" id="s6">
+            <img src="star.png" alt="star" id="s7">
+            <img src="star.png" alt="star" id="s8">
+        </div>
+        <button class = "btn" id = "starreset">Reset Stars</button>
+        <script src="stars.js"></script>
         <div class="minigame">
         <h2>
             Minigame Bonus Star!
