--- a/superstars/superpeach.html
+++ b/superstars/superpeach.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="peach.css">
         <title>Peach's Birthday Cake!</title>
     </head>
     <body>
