--- a/superstars/superyoshi.html
+++ b/superstars/superyoshi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="yoshi.css">
         <title>Yoshi's Tropical Island!</title>
     </head>
     <body>
