--- a/superstars/superpeach.html
+++ b/superstars/superpeach.html
@@ -69,19 +69,24 @@
 
         <div class="des">
         <p>
-            Yoshi's Tropical Island is a one star difficulty board on Mario Party Super Stars. Originating from the original Mario Party, 
-            this board doesn't have many gimmicks and has no star spots to keep track of since the star just alternates between two spots.
+            Peach's Birthday Cake is a 3 Star map on Mario Party Superstars, and it is a map from the original Mario Party. This map is very linear in terms of gameplay 
+            and is definitely a volatile map.
         </p>
         <h2>
             Gimmicks!
         </h2>
         <p>
-            There isn't many gimmicks on this board as this is the most simple board in the whole game. There are only two star spots on 
-            the board, one on each island. The star moves between these two spots when a happening space is landed on. 
-            To treverse these two islands, you have to pass by a Thwomp and pay coins. However, the amount paid to cross will continue 
-            to increase proportional to the number of coins invested by the players, meaning if someone pays 49 coins to cross, the 
-            price is now 50 coins in order to cross! However, the maximum amount of coins to cross the thwomp is 50 coins so add that to 
-            your future strategies!
+            You would think that if a map basically only has one path and one star spot would have like no gimmicks, however, that is entirely wrong. This map punishes 
+            you if you have bad rolls or bad luck. The main thing is that there is only one star spot in this game, meaning whoever has the best dice rolls will generally 
+            win the game. I say generally because the other main gimmick, which is Piranha Plant, can definitely ruin your game plan. How it works is that if a player 
+            lands on an unoccupied happening space, they can plant a Piranha Plant. They can either Plant one that steals coins or plant one that steals a star. It's 
+            usually in the players best interest to plant has many Piranha Plants as possible because they are able swing the game entirely if luck is in your favor. 
+            Also, there is a junction where the players will plant a seed to see if they will continue to go on the path they are now, or go down the Bowser path. 
+            The Bowser Path has some red spaces, battle, and chance time spaces making it a very voltile area to be on. Bowever himself steals coins and gives you an item 
+            just like in Yoshi's Tropical Island. However, if you have a lot of coins, going on this path isn't that bad because it's closer to the star compared to 
+            going on the normal path. Some differences from this board and the original Mario Party board is that they added slides. If you land on the happening space after 
+            the star, you can slide down and skip the seeds and a lot of spaces, bringing you closer to the star. Another change is that they added an item shop on top of the 
+            cake. In the original Mario Party, they didn't have items in the game.
         </p>
         <h2>
             Board Layout!
@@ -101,25 +106,22 @@
             Best Items!
         </h2>
         <p>
-            I recommend stashing warp blocks in your inventory because it's a cheap way to travel between the islands and destroy your 
-            opponents. I say this because there is a lot of variance with this board since the star could move at anytime, so having one 
-            of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
-            pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
-            dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
-            a ton of these when you cross him, so I would recommend getting them from the store.
+            The Warp Block is definitely the best item for this board in my opinion. Because everyone is on the same path, if you are the farthest away from the 
+            star, you can just use a warp block to guarantee that you will be closer to the star. Also, movement items are really good because it allows you to get 
+            to the star faster. Just be careful and know that you are taking a risk because you can easily get warp blocked by an opponent, directly benefitting your 
+            opponent while putting you in a bad spot. 
         </p>
         <h2>
             Strategies!
         </h2>
         <p>
-            I recommend not spending an obscene amount of coins at thowmps to mess with your opponents. Instead, I would just spend 
-            the bear minimum to cross because there is so much variance. For example, you spend all of your coins to trap the other 
-            opponents on the island without the star, and then someone lands on a happening space and moves the star. Now you are 
-            locked on an island because you can't afford to go back. However, there are always situations where blocking is beneficial, 
-            especially when there is a lot of coins in the coin economy. For example, blocking first place off an island can allow you to 
-            catch up can be extremely good, especially since the coin star has changed to whoever collects the most coins, meaning you 
-            do not have to save coins anymore. Also, curse blocking people to land on happening spaces is always a good way to get the 
-            star moved. However, be careful you aren't giving away the happening star!
+            There isn't really much strategy on this board because it's so linear. It's all about being lucky and out playing your opponents in minigames to have a lot of 
+            coins. You need coins on this board to plant Piranha Plants. Stealing a star in this game is huge because it gives you a two star swing, especially if you 
+            steal a star from first place. It's also very important to track happening space bonus star since there is so many happening spaces on this board. Also, I 
+            recommend almost always buying a warp block from the item shop. It's just too valuable to pass up as it adds chaos in your favor to the board. If you go 
+            down bowser path, it's not the end of world. It's pretty easy to earn coins in this game so losing coins isn't too detrimental, and it even puts you closer 
+            to the star. Having a movement, item in this section allows you to skip the section (except Bowser) with relative ease, avoiding all of the red spaces, 
+            the battle space, and the chance time space.
         </p>
         </div>
 
