--- a/superstars/superwood.html
+++ b/superstars/superwood.html
@@ -83,8 +83,8 @@
 
         <div class="des">
         <p>
-            Yoshi's Tropical Island is a one star difficulty board on Mario Party Super Stars. Originating from the original Mario Party, 
-            this board doesn't have many gimmicks and has no star spots to keep track of since the star just alternates between two spots.
+            Woody Woods is a 4 star board in Mario Party Superstars and is the only Mario Party 3 board in this series. This is also my favorite board in 
+            Super Stars 
         </p>
         <h2>
             Gimmicks!
