--- a/superstars/superwood.html
+++ b/superstars/superwood.html
@@ -83,57 +83,57 @@
 
         <div class="des">
         <p>
-            Woody Woods is a 4 star board in Mario Party Superstars and is the only Mario Party 3 board in this series. This is also my favorite board in 
-            Super Stars 
+            Woody Woods is a 4 star board in Mario Party Superstars and is the only Mario Party 3 board in this series. Woody Woods 
+            has a total of 10 star spots, and this is also my favorite board in the series.
         </p>
         <h2>
             Gimmicks!
         </h2>
         <p>
-            There isn't many gimmicks on this board as this is the most simple board in the whole game. There are only two star spots on 
-            the board, one on each island. The star moves between these two spots when a happening space is landed on. 
-            To treverse these two islands, you have to pass by a Thwomp and pay coins. However, the amount paid to cross will continue 
-            to increase proportional to the number of coins invested by the players, meaning if someone pays 49 coins to cross, the 
-            price is now 50 coins in order to cross! However, the maximum amount of coins to cross the thwomp is 50 coins so add that to 
-            your future strategies!
+            Woody Woods has a lot of gimmicks. The main mechanic utilizes junctions. At most junctions, there is a sign that points to one direction, and the 
+            direction changes after each turn, Also, if a happening space that is associated to the sign is landed on, it switchs the direction at the end of 
+            player's turn. Also, there are the two trees on the left side on the math. If a player lands on the happening space, the Woody (Green Tree) will either give 
+            you a another roll or 5 coins, and Evil Woody (Purple Tree) will either give you a curse dice block or minus 5 coins. A key difference from Mario Party 3 and 
+            Mario Party Superstars is the Skeleton Gate placements. Instead of going from up to down, they go down to up. For example, the top gate can take you to the 
+            path on the Boo, skipping Evil Woody. Also, if you get unlucky and go down the wrong path, you can still access Boo. The bottom Skeleton Gate allows 
+            you to guarantee access to the right path. Also, it gives access to a lucky space and a chance time space. Overall, the Skeleton Gate change is 
+            very good, and it definitely makes Skeleton Keys valuable on this map. Also, there are 3 item shops on this map, which is an increase from Mario Party 3.
         </p>
         <h2>
             Board Layout!
         </h2>
         <p>
             Total: 55 Spaces!
-            23 Blue Spaces
-            5 Red Spaces
-            11 Lucky Spaces
-            7 Happening Spaces
-            3 Item Spaces
-            3 Bowser Spaces
-            2 VS Spaces
-            1 Chance Time Space
+            23 Blue Spaces, 
+            5 Red Spaces, 
+            11 Lucky Spaces, 
+            7 Happening Spaces, 
+            3 Item Spaces, 
+            3 Bowser Spaces, 
+            2 VS Spaces, 
+            1 Chance Time Space, 
         </p>
         <h2>
             Best Items!
         </h2>
         <p>
-            I recommend stashing warp blocks in your inventory because it's a cheap way to travel between the islands and destroy your 
-            opponents. I say this because there is a lot of variance with this board since the star could move at anytime, so having one 
-            of these handy has a great chance of putting you in a great situation. Movement isn't that big of a deal since the board is 
-            pretty small and you just cycle around for the most part; however, having movement items like mushrooms, double, and triple 
-            dice blocks are definitely still useful and give less risk! Also curse blocks are really good on this map, but Bowser gives 
-            a ton of these when you cross him, so I would recommend getting them from the store.
+            Unfortunately, the Reverse Mushroom from Mario Party 3 is not in this game, making navigating junctions a lot more difficult. I definitely recommend 
+            movement items for this map, and with so many item shops and items spaces, it's definitely not hard to get. Also, Warp Blocks are a decent option. 
+            There are so many junctions that usually only one person in a good position for the star at a time. A one third chance isn't consistent enough, but this map 
+            has so much variance that a Warp Block will always have a use. Curse Dice Blocks also have a use. If you want to slow yourself down and wait for the 
+            signs to switch, then using a curse mushroom on yourself is smart. Also, using a curse mushroom on your opponents to force them on a path is a smart move. 
+            However, buying a Curse Dice Block from the store may be a waste since movement items should be prioritized, especially since you can get Curse Dice Blocks 
+            from item spaces. 
         </p>
         <h2>
             Strategies!
         </h2>
         <p>
-            I recommend not spending an obscene amount of coins at thowmps to mess with your opponents. Instead, I would just spend 
-            the bear minimum to cross because there is so much variance. For example, you spend all of your coins to trap the other 
-            opponents on the island without the star, and then someone lands on a happening space and moves the star. Now you are 
-            locked on an island because you can't afford to go back. However, there are always situations where blocking is beneficial, 
-            especially when there is a lot of coins in the coin economy. For example, blocking first place off an island can allow you to 
-            catch up can be extremely good, especially since the coin star has changed to whoever collects the most coins, meaning you 
-            do not have to save coins anymore. Also, curse blocking people to land on happening spaces is always a good way to get the 
-            star moved. However, be careful you aren't giving away the happening star!
+            Well obviously tracking happening spaces is super important since there is a lot of happening spaces on the board. Also, it's very difficult to line up 
+            your movement perfectly because the signs have so much variance and there is many signs. Having a Skeleton Key in hand will always be nice because it adds 
+            consistency. Because it's very difficult to get stars on this board, hitting boo as much as possible to steal stars from opponents is a viable strategy. 
+            Using the mole can be a good choice to mess with your opponents while also adding chaos. Overall, this board is super chaotic. It's very important to win 
+            minigames to have a lot of coins and get happening star.
         </p>
         </div>
 
