--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <form method="get" action="superstars/superwood.html">
             <button type="submit" class = "btn" id = "superwood">Woody Woods!</button><br><br>
             </form>
-
+            <form method="get" action="diceblock/diceblock.html">
+            <button type="submit" class = "btn" id = "diceblock">Dice Block Generator!</button><br><br>
+            </form>
         </body>
     </html>
