--- a/diceblock/diceblock.html
+++ b/diceblock/diceblock.html
@@ -11,7 +11,7 @@
                 <p id="musher"></p>
                 <button class = "btn" id = "double" onclick = "doubleDice()">Double Dice Block!</button>
                 <p id="dub"></p>
-                <button class = "btn" id = "triple">Triple Dice Block!</button>
+                <button class = "btn" id = "triple" onclick = "tripleDice()">Triple Dice Block!</button>
                 <p id="trip"></p>
                 <button class = "btn" id = "curse" onclick = "curseDice()">Curse Dice Block!</button>
                 <p id="cur"></p>
