--- a/superstars/superspace.html
+++ b/superstars/superspace.html
@@ -81,19 +81,20 @@
 
         <div class="des">
         <p>
-            Yoshi's Tropical Island is a one star difficulty board on Mario Party Super Stars. Originating from the original Mario Party, 
-            this board doesn't have many gimmicks and has no star spots to keep track of since the star just alternates between two spots.
+            Space Land is a 2 star difficulty board in Mario Party Superstars! This board was originally from Mario Party 2 and has 8 star spots! This map 
+            has a lot of paths, so it's very important to be on the most optimal path while avoiding the Bowser Coin Beam!
         </p>
         <h2>
             Gimmicks!
         </h2>
         <p>
-            There isn't many gimmicks on this board as this is the most simple board in the whole game. There are only two star spots on 
-            the board, one on each island. The star moves between these two spots when a happening space is landed on. 
-            To treverse these two islands, you have to pass by a Thwomp and pay coins. However, the amount paid to cross will continue 
-            to increase proportional to the number of coins invested by the players, meaning if someone pays 49 coins to cross, the 
-            price is now 50 coins in order to cross! However, the maximum amount of coins to cross the thwomp is 50 coins so add that to 
-            your future strategies!
+            The main gimmick in this map is the Bowser Coin Beam! There is the main junction in the middle and everytime it someone crosses it, the counter goes 
+            down by one. When the counter reaches zero, the Bowser Coin Beam fires and everyone on the diagonal line going from top-right to bottom-left gets hit, 
+            losing all of their coins. After this, the counter resets back to 5. Next is the movement option. If a happening space is landed on the edge of the map, 
+            then a Thwomp or a Whomp will chase after you and all the other players on that path to the other corner. if you pay 5 coins, the Snufit will set a speed 
+            trap. Now, if someone lands on a happening space, the Thwomp or the Whomp will chase you down two edges, bringing everyone on the path with you. Lastly, 
+            the Skeleton Gates are actually not bad on this map. The Skeleton Gate that is top left is a very good option. It allows you to cut through to the middle, 
+            conserving turns, but more importantly, there is boo on this path. 
         </p>
         <h2>
             Board Layout!
